--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 
-  <script src="/node_modules/steal/steal.js" config="../package.json!npm">
+  <script src="/node_modules/steal/steal.js" env="can-hot-dev" config="../package.json!npm">
     import HMR from 'steal-hmr'
     import canHot from 'can-hot'
     import $ from 'jquery'
