--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Can-Hot Demo App (dev)</title>
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 
   <script src="./node_modules/steal/steal.js" main="@empty">
