--- a/test.html
+++ b/test.html
@@ -1,1 +1,4 @@
-<script src="../node_modules/steal/steal.js" main="test/test"></script>
+<head>
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+  <script src="../node_modules/steal/steal.js" main="test/test"></script>
+</head>
